New: commands auth_ldap_group_attribute, auth_ldap_group_attribute_is_dn + fixes

--- a/example.conf
+++ b/example.conf
@@ -15,6 +15,9 @@ http {
     auth_ldap_binddn cn=nginx,ou=service,dc=example,dc=com;
     auth_ldap_binddn_passwd mYsUperPas55W0Rd
 
+    auth_ldap_group_attribute uniquemember; # default 'member'
+    auth_ldap_group_attribute_is_dn on; # default on
+
     server {
 	listen       8081;
 	server_name  localhost;
