add auth_ldap_require valid_user

--- a/example.conf
+++ b/example.conf
@@ -24,6 +24,8 @@ http {
 
 	location / {
 	    auth_ldap "Closed content";
+	    
+	    #auth_ldap_require valid_user;
 	    auth_ldap_require user 'cn=Super User,ou=user,dc=example,dc=com';
 	    auth_ldap_require group 'cn=admins,ou=group,dc=example,dc=com';
 	    auth_ldap_require group 'cn=user,ou=group,dc=example,dc=com';
