need ; after the password input, or else it give an error
need ; after the password input, or else it give an error "invalid number of arguments in "auth_ldap_binddn_passwd" directive in /etc/nginx/nginx.conf"

--- a/example.conf
+++ b/example.conf
@@ -13,7 +13,7 @@ http {
 
     auth_ldap_url ldap://ldap.example.com/dc=example,dc=com?uid?sub?(objectClass=person);
     auth_ldap_binddn cn=nginx,ou=service,dc=example,dc=com;
-    auth_ldap_binddn_passwd mYsUperPas55W0Rd
+    auth_ldap_binddn_passwd mYsUperPas55W0Rd;
 
     auth_ldap_group_attribute uniquemember; # default 'member'
     auth_ldap_group_attribute_is_dn on; # default on
