--- a/config
+++ b/config
@@ -1,5 +1,14 @@
 ngx_addon_name=ngx_http_auth_ldap_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_auth_ldap_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_auth_ldap_module.c"
+
 CORE_LIBS="$CORE_LIBS -lldap"
+
+case "$NGX_PLATFORM" in
+    SunOS:*)
+        CORE_LIBS="$CORE_LIBS -llber"
+    ;;
+esac
+
+CFLAGS="$CFLAGS"
 CFLAGS="$CFLAGS"
