replacing tabs with spaces to fix example.conf formating

--- a/example.conf
+++ b/example.conf
@@ -18,7 +18,7 @@ http {
       # bind as
       binddn "CN=Operator,OU=Service Accounts,DC=company,DC=com";
       # bind pw
-      binddn_passwd <PUT Operator PASSWORD HERE>;
+      binddn_passwd <PUT Operator's PASSWORD HERE>;
       # group attribute name which contains member object
       group_attribute member;
       # search for full DN in member object
