--- a/config
+++ b/config
@@ -5,7 +5,7 @@ NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_auth_ldap_module.c"
 CORE_LIBS="$CORE_LIBS -lldap"
 
 case "$NGX_PLATFORM" in
-    Linux:*|SunOS:*)
+    FreeBSD:*|Linux:*|SunOS:*)
         CORE_LIBS="$CORE_LIBS -llber"
     ;;
 esac
