--- a/config
+++ b/config
@@ -1,14 +1,16 @@
 ngx_addon_name=ngx_http_auth_ldap_module
-HTTP_MODULES="$HTTP_MODULES ngx_http_auth_ldap_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_auth_ldap_module.c"
 
-CORE_LIBS="$CORE_LIBS -lldap"
+ngx_module_libs=-lldap
 
-case "$NGX_PLATFORM" in
-    Darwin:*|FreeBSD:*|Linux:*|SunOS:*)
-        CORE_LIBS="$CORE_LIBS -llber"
-    ;;
-esac
-
-CFLAGS="$CFLAGS"
-CFLAGS="$CFLAGS"
+if [ $ngx_module_link = DYNAMIC ] ; then
+    ngx_module_name="ngx_http_auth_ldap_module"
+    ngx_module_srcs="$ngx_addon_dir/ngx_http_auth_ldap_module.c"
+    . auto/module
+elif [ $ngx_module_link = YES ] ; then
+    ngx_module_type=HTTP
+    ngx_module_name=ngx_http_auth_ldap_module
+    ngx_module_incs=
+    ngx_module_deps=
+    ngx_module_srcs="$ngx_addon_dir/ngx_http_auth_ldap_module.c"
+    . auto/module
+fi
