--- a/config
+++ b/config
@@ -1,6 +1,15 @@
 ngx_addon_name=ngx_http_auth_ldap_module
-HTTP_MODULES="$HTTP_MODULES ngx_http_auth_ldap_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_auth_ldap_module.c"
+
+if test -n "$ngx_module_link"; then
+    ngx_module_type=HTTP
+    ngx_module_name=ngx_http_auth_ldap_module
+    ngx_module_srcs="$ngx_addon_dir/ngx_http_auth_ldap_module.c"
+
+    . auto/module
+else
+    HTTP_MODULES="$HTTP_MODULES ngx_http_auth_ldap_module"
+    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_auth_ldap_module.c"
+fi
 
 CORE_LIBS="$CORE_LIBS -lldap"
 
