- Add support of a resolver to resolve LDAP hostname - Add possibility to retrieve LDAP attributes during LDAP search

--- a/example.conf
+++ b/example.conf
@@ -11,6 +11,9 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    auth_ldap_resolver 8.8.8.8;
+    auth_ldap_cache_enabled on;
+
     # define ldap server
     ldap_server ad_1 {
       # user search base.
@@ -18,7 +21,11 @@ http {
       # bind as
       binddn "CN=Operator,OU=Service Accounts,DC=company,DC=com";
       # bind pw
-      binddn_passwd <PUT Operator's PASSWORD HERE>;
+      binddn_passwd <OPERATOR PASSWORD HERE>;
+      # Select attributes to be retrieved during the search (several are possible)
+      search_attribute mail;
+      search_attribute sn;
+      search_attribute givenName;
       # group attribute name which contains member object
       group_attribute member;
       # search for full DN in member object
