- Fix resolver issues and use resolver at each connection (re-)establishement - Replaces list of 'search_attribute XXX' parameter by 'search_attributes XXX [YYY [ ... ]]' - Support additional/optional 'encoding' param for 'binddn_passwd'   parameter

--- a/example.conf
+++ b/example.conf
@@ -21,11 +21,11 @@ http {
       # bind as
       binddn "CN=Operator,OU=Service Accounts,DC=company,DC=com";
       # bind pw
-      binddn_passwd <OPERATOR PASSWORD HERE>;
-      # Select attributes to be retrieved during the search (several are possible)
-      search_attribute mail;
-      search_attribute sn;
-      search_attribute givenName;
+      binddn_passwd "<OPERATOR PASSWORD HERE>";
+      # Or binddn_passwd "base64(<OPERATOR PASSWORD HERE>)" base64;
+      # Or binddn_passwd "hex(<OPERATOR PASSWORD HERE>)" hex;
+      # Select attributes to be retrieved during the search (space separated list of attributes)
+      search_attributes mail sn givenName;
       # group attribute name which contains member object
       group_attribute member;
       # search for full DN in member object
